# KoreanStocks

./: .gitignore  CLAUDE.md  README.md  README_PYPI.md  pyproject.toml  train_models.py
.github/workflows/: daily_analysis.yml
data/storage/: stock_analysis.db
docs/: 1_TECHNICAL_ANALYSIS.md  2_ML_ANALYSIS.md  3_NEWS_ANALYSIS.md  4_VALUE_SCREENING.md  5_QUALITY_SCREENING.md  6_PERFORMANCE_IMPROVEMENT.md  ML_ANALYSIS.md  NEWS_ANALYSIS.md  QUALITY_SCREENING.md  TECHNICAL_ANALYSIS.md  VALUE_SCREENING.md
models/saved/prediction_models/: tcn_model.pt
src/koreanstocks/: __init__.py  cli.py
src/koreanstocks/api/: app.py  dependencies.py
src/koreanstocks/api/routers/: analysis.py  market.py  models.py  quality.py  recommendations.py  value.py
src/koreanstocks/core/: config.py  constants.py
src/koreanstocks/core/data/: fundamental_provider.py  provider.py
src/koreanstocks/core/engine/: analysis_agent.py  features.py  prediction_model.py  quality_screener.py  recommendation_agent.py  tcn_model.py  trainer.py  value_screener.py
src/koreanstocks/core/utils/: backtester.py  outcome_tracker.py
src/koreanstocks/static/: dashboard.html  index.html
src/koreanstocks/static/css/: theme.css
src/koreanstocks/static/js/: dashboard.js  slides.js
tests/: test_core.py
